<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tobias UI 7</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="manage_apps">Manage apps</string>
    <string name="multi">Multi-select</string>
    
    <string-array name="pref_bg_type_entries">
        <item name="0">Solid color</item>
        <item name="1">Image</item>
        <item name="2">Wallpaper</item>
    </string-array>
    <string-array name="pref_bg_type_values">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
    </string-array>
    
    <string-array name="pref_list_style_entries">
        <item name="0">List</item>
        <item name="1">Grid</item>
        <item name="2">Horizontal paged</item>
    </string-array>
    <string-array name="pref_list_style_values">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
    </string-array>
    
        <string name="pref_bg_type">Background...</string>
        <string name="pref_bg_color">Background color</string>
        <string name="pref_bg_image">Background image</string>
        <string name="pref_bg_alpha">Background transparency</string>
        <string name="pref_low_quality">Low quality background</string>
        <string name="pref_low_quality_summary">Better scrolling</string>
        <string name="pref_font">Font type</string>
        <string name="pref_font_color">Font color</string>
        <string name="pref_font_size">Font size</string>
        <string name="pref_font_size_title">Choose desired font size</string>
        <string name="pref_icon_size">Icon size</string>
        <string name="pref_icon_size_title">Choose desired icon size</string>
        <string name="button_OK">OK</string>
        <string name="button_cancel">Cancel</string>
        <string name="button_restore">Restore</string>
        <string name="pref_show_home">Show "Back to home" button</string>
        <string name="pref_fullscreen">Fullscreen (Hides status bar)</string>
        <string name="pref_restore_default">Restore settings to default</string>
        <string name="restore_default_confirmation">Are you sure you want to restore all the preferences to its default value? Including hidden and edited apps. </string>
        <string name="restore_default_title">Warning</string>
        <string name="pref_list_style">Style</string>
        <string name="pref_row_spacing">Row spacing</string>
        <string name="pref_row_spacing_title">Choose desired row spacing</string>
        <string name="pref_num_columns">Number of columns</string>
        <string name="pref_num_columns_title">Choose desired number of columns</string>
        <string name="pref_num_rows">Number of rows</string>
        <string name="pref_num_rows_title">Choose desired number of rows</string>
        <string name="coming_soon">Coming soon...</string>
        <string name="portrait">Portrait</string>
        <string name="landscape">Landscape</string>
        <string-array name="app_actions">
            <item>Hide</item>
            <item>Details</item>
            <item>Uninstall</item>
            <item>Create shortcut</item>
            <item>Edit</item>
            <item>Add to folder</item>
            <item>New folder</item>
            <item>Delete folder</item>
            <item>Edit folder</item>
            <item>Delete from folder</item>
            <item>Change folder</item>
        </string-array>
        
        <string name="pref_home_position">Home button position</string>
        <string-array name="pref_home_position_entries">
        <item name="0">Center</item>
        <item name="1">Left</item>
        <item name="2">Right</item>
    	</string-array>
    	<string-array name="pref_home_position_values">
       		<item name="0">0</item>
        	<item name="1">1</item>
        	<item name="2">2</item>
    	</string-array>
    	
    	<string name="pref_screen_orientation">Screen orientation</string>
    	<string-array name="pref_screen_orientation_entries">
        <item name="0">Sensor</item>
        <item name="1">Portrait</item>
        <item name="2">Landscape</item>
    	</string-array>
    	<string-array name="pref_screen_orientation_values">
       		<item name="0">0</item>
        	<item name="1">1</item>
        	<item name="2">2</item>
    	</string-array>
    	
    	<string name="pref_hidden_apps">Hidden apps</string>
    	<string name="unhide_confirmation">Unhide selected apps?</string>
    	<string name="unhide">Unhide</string>
    	<string name="select_all">Select all</string>
        <string name="no_hidden_apps">There are not any hidden app</string>
    	
    	<string name="pref_remember_position">Remember list position</string>
    	
    	<string name="pref_show_indicators">Show page indicators</string>
    	<string name="pref_autohide_indicators">Auto-hide indicators</string>
    	
    	<string name="no_fonts">Put your fonts into /sdcard/AppDrawer/fonts</string>
    	
    	<string name="sort">Sort</string>
    	<string name="sortByName">Name (A-Z)</string>
    	<string name="sortByDate">Last installed</string>
    	<string name="sortByDate2">Last installed first</string>
    	<string name="sortByUses">Most used</string>
        <string name="sortFoldersFirst">Folders first</string>
    	
    	<string name="check_version">Click to check for new version</string>
    	<string name="no_new_version">There isn\'t any new version available</string>
    	<string name="new_version">There is a new version available, download</string>
    	
    	<string name="pref_export">Make new backup</string>
    	<string name="pref_import">Saved backups</string>
    	<string name="pref_export_summary">Preferences, hidden apps, folders, etc.</string>
    	<string name="pref_import_summary">From backup</string>
    	<string name="exported">Preferences exported succesfully</string>
    	<string name="exported_DB">Database exported succesfully</string>
    	<string name="error_exporting">Error while exporting preferences</string>
    	<string name="error_exporting_DB">Error while exporting database</string>
    	<string name="imported">Preferences restored succesfully</string>
    	<string name="imported_DB">Database restored succesfully</string>
    	<string name="export_confirmation">Are you sure you want to export your preferences? Older backup will be deleted.</string>
    	<string name="import_confirmation">Are you sure you want to import preferences from backup? Current settings will be deleted.</string>
    	<string name="prefs_not_found">Preferences backup not found</string>
    	<string name="db_not_found">Database backup not found</string>
        
        <string name="folder_name">Folder\'s name</string>
    	<string name="folder_save">Save</string>        
        <string name="folder_discard">Discard</string>
        <string name="delete_folder">Delete folder</string>
        <string name="delete_folder_confirm">Are you sure you want to delete this folder?</string>
        <string name="choose_folder">Choose a folder</string>
        <string name="keep_editing">Keep editing the folder</string>
        
        <string name="pref_look_and_feel">Look and feel</string>
    	<string name="pref_behaviour">Behaviour</string>
    	<string name="pref_themes">Themes</string>
    	<string name="pref_backups">Backups</string>
    	<string name="pref_backups_summary">Save a copy of all your settings, just in case.</string>
        <string name="pref_bg_type2">Type</string>
        
        <string name="open">Open</string>
        <string name="no_folders">Currently, there are no folders. Would you like to create your first one?</string>
        <string name="no_folders_title">No folders</string>
        <string name="new2">New</string>
        
        <string name="restore_backup">Restaurar</string>
        <string name="rename_backup">Rename</string>
        <string name="delete_backup">Delete</string>
        
    	<string name="ambilwarna_cancel">Cancel</string>
    	<string name="ambilwarna_ok">OK</string>
</resources>
